--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ remote_theme: raviriley/agency-jekyll-theme
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 
-title      : DSY Art
-email      : dsy135@gmail.com #this is also the email contact forms will go to
+title      : DSY ART
+email      : dsyart135@gmail.com #this is also the email contact forms will go to
 description: "My RED art "
 author     : Deb
 # logo:     #optional, defaults to site title
