--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 #theme: jekyll-agency
 remote_theme: raviriley/agency-jekyll-theme
 
-url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+url    : "https://dsyart.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 
 title      : DSY ART
@@ -25,7 +25,7 @@ author     : Deb
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
 
-locale: "en-GB" # See available languages in _data/sitetext.yml
+locale: "en-CA" # See available languages in _data/sitetext.yml
 
 analytics:
   google: #Google Analytics tracking code here
